release 1.18
- Fixed issue 1681
  http://java.net/jira/browse/JERSEY-1681
  Memory Leak in the basic Jersey webapp deploying on GFv312
- Fixed issue 1593
  http://java.net/jira/browse/JERSEY-1593
  JSON-Grammar generation format is altered by POJOMappingFeature
- Fixed issue 1594
  http://java.net/jira/browse/JERSEY-1594
  JSON-Schema generation doesn't take into account notation options
- Fixed issue
  JAX-RS service fails to start when WADL generation disabled. (WLS)
- Fixed issue 1659
  http://java.net/jira/browse/JERSEY-1659
  First unknown annotation on resource method parameter is selected instead of last.

release 1.17 (01-2013)
- Fixed issue JERSEY-1642
  http://java.net/jira/browse/JERSEY-1642
  ResponseListener#onError is never invoked
- Fixed issue JERSEY-1641
  http://java.net/jira/browse/JERSEY-1641
  Accepted contribution by Arul Dhesiaseelan - Simple Server version update (4.1.20 -> 5.0.4)
- Fixed issue JERSEY-1618
  http://java.net/jira/browse/JERSEY-1618
  Incorrect ResourceConfig initialization"

release 1.16 (12-2012)
- Fixed issue JERSEY-1601
  http://java.net/jira/browse/JERSEY-1601
  Avoid String type to store plain passwords when using HTTPBasicAuthFilter and HTTPDigestAuthFilter
- Fixed issue
  OPTIONS call to a webservice method with a "/" in path does not return method element
- Fixed issue JERSEY-1459
  http://java.net/jira/browse/JERSEY-1459
  Unmarshalling error when parsing a JSON message generated from Jira 5.1.x

release 1.15 (10-2012)
- Fixed issue JERSEY-1441
  http://java.net/jira/browse/JERSEY-1441
  Jersey bookstore sample test cases need reactivation
- Fixed issue JERSEY-1440
  http://java.net/jira/browse/JERSEY-1440
  Dead links found in sample READMEs + JERSEY-1440: Dead links found in sample READMEs
- Fixed issue JERSEY-1409
  http://java.net/jira/browse/JERSEY-1409
  Enabled InputStream parameter to be set on a WADL generator by relaxing parameter type check
- Fixed issue JERSEY-1436