@@ -5,5 +5,9 @@ illegal.provider.class.name=Illegal provider-class name: {0}.
 provider.could.not.be.created=The class {0} implementing provider {1} could not be instantiated: {2}
 provider.class.could.not.be.loaded=The class {0} implementing provider {1} could not be loaded: {2}
 provider.not.found=The class {0} implementing the provider {1} is not found. The provider implementation is ignored.
-dependent.class.of.provider.not.found=A dependent class, {0}, of the class {1} implementing the provider {2} is not found. The provider implementation is ignored.
-dependent.class.of.provider.format.error={0}. A dependent class of the class {1} implementing the provider {2} is malformed. The provider implementation is ignored. Check if the malformed class is part of a stubbed jar that used for compiling only. 
+dependent.class.of.provider.not.found=A dependent class, {0}, of the class {1} implementing the provider {2} is not found. \
+  The provider implementation is ignored.
+dependent.class.of.provider.format.error={0}. A dependent class of the class {1} implementing the provider {2} is malformed. \
+  The provider implementation is ignored. Check if the malformed class is part of a stubbed jar that used for compiling only.
+osgi.registry.error.opening.resource.stream=Unable to open an input stream for resource {0}.
+osgi.registry.error.processing.resource.stream=Unexpected error occurred while processing resource stream {0}.
